# image-augmentation-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  dependency.py  logging_config.json  main.py
app/core/: augmentations.py
app/db/: database.py
app/dependency/: async_dependency.py  sync_dependency.py
app/exceptions/: __init__.py  common.py  directory_manager.py  image.py  user.py
app/internal/: augmentations.py  database.py  file_handling.py
app/models/: logging.py
app/repository/: __init__.py  directory_manager.py  image.py  image_processing.py  user.py
app/routers/: health.py  image.py  user.py
app/schemas/: health.py  image.py  logging.py  user.py
app/services/: _services.md  image.py  user.py
docs/engineering/: _about_engineering.md  augmentations_illustrated.md  important_dependencies.md  system_design.md  transactions_database.md
docs/how-to/: generate-test-coverage-reports.md  install-python.md  run-tests.md  try-application.md  try-the-application.md
tests/: conftest.py  helperfunc.py
tests/app/: test_dependency.py  test_main.py
tests/data/: basic_text_file.txt
tests/end_to_end/: NO_test_upload_an_image.py  NO_test_upload_and_augment_an_image.py  NO_test_upload_and_download_a_processed_image.py  conftest.py  test_augment_an_image_201.py  test_create_a_user.py  test_create_and_delete_a_user.py  test_delete_a_user_204.py  test_delete_a_user_403.py  test_delete_a_user_404.py  test_download_a_processed_image_200.py  test_download_an_unprocessed_image_200.py  (+12 more)
(+88 files in other folders)
