[project]
name = "image-augmentation-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.10.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "scipy>=1.16.1",
    "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.138.15",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.2.1",
    "pytest-docker>=3.2.3",
    "pytest-mock>=3.14.1",
    "pytest-postgresql>=7.0.2",
    "ruff>=0.12.8",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]